# XTouchAsio

./: xtouch.sql
XTouch/: AdminWindow.cxx  AdminWindow.hxx  CMakeLists.txt  Config  ControlPanel.cxx  ControlPanel.hxx  IconvWrapper.hxx  InFolderWindow.cxx  InFolderWindow.hxx  LoginWindow.cxx  LoginWindow.hxx  MainWindow.cxx  MainWindow.hxx  ModelFileManager.cxx  ModelFileManager.hxx  OcctGtkViewer.cxx  OcctGtkViewer.hxx  SortDataManager.hxx  UIData  ViewerInteractor.cxx  ViewerInteractor.hxx  XTouchDoc.txt  global.cxx  global.hxx  main.cxx
XTouch/Client/: Client.cxx  Client.hxx  net_client.hxx  net_common.hxx  net_connection.hxx  ocl_net.hxx
XTouch/src/Paint/: CMakeLists.txt  paint.cpp
XTouch/src/Windows/AdminWindow/: AdminWindow.glade
XTouch/src/Windows/LoginWindow/: LoginWindow.glade  LoginWindow.glade~
XTouch/src/Windows/MainWindow/: MainWindow.glade  MainWindow.glade~
XTouch/src/Windows/MainWindow/InFolderScreen/: style.css
XTouch/src/Windows/MainWindow/MainScreen/: style.css
XTouch/src/Windows/ScreenshotWindow/: ScreenshotWindow.glade  ScreenshotWindow.glade~  style.css
XTouch/src/Windows/ViewportWindow/: ViewportWindow.glade  ViewportWindow.glade~  style.css
XTouchServer/: CMakeLists.txt  Config  net_client.hxx  net_connection.hxx  net_message.hxx  net_server.hxx  net_tsqueue.hxx  ocl_net.hxx
XTouchServer/Server/: CMakeLists.txt  server.cxx
XTouchServer/models/:  AK001-19-00-000-A.xbf   FlashHobby D3542 Model.xbf   Micro_motorreductor.xbf   No000031_ASSY.xbf   No000049_ASSY.xbf   WONDOM BCPB3 v7.xbf  microserva.xbf  pcb.xbf  pieza.xbf
XTouchServer/src/: LoginData
